# ligotimegps

./: .appveyor.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md
.github/workflows/: build.yml  docs.yml
.gitlab/ci/: qa.yml  test.yml
docs/: conf.py  index.rst
ligotimegps/: __init__.py  _ligotimegps.py  _ligotimegps.pyx  _version.py  ligotimegps.py  protocol.py  test_ligotimegps.py
ligotimegps/tests/: __init__.py  test_ligotimegps.py
