# -- Project

[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "ligotimegps"
authors = [
    {name = "Duncan Macleod", email = "duncan.macleod@ligo.org"},
]
description = "A pure Python version of lal.LIGOTimeGPS"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://ligotimegps.readthedocs.io/"
"Download" = "https://pypi.org/project/ligotimegps/"
"Bug Tracker" = "https://gitlab.com/gwpy/ligotimegps/-/issues"
"Documentation" = "https://ligotimegps.readthedocs.io/"
"Source Code" = "https://gitlab.com/gwpy/ligotimegps"

[dependency-groups]
docs = [
    "sphinx>=1.8.0",
    "sphinx-automodapi",
    "sphinx_rtd_theme",
    "sphinx-tabs",
]
test = [
    "pytest>=3.6.3",
    "pytest-cov>=2.4.0",
]

# -- Tools

[tool.coverage.paths]
source = [
  "ligotimegps/",
  "*/ligotimegps/",
]

[tool.coverage.report]
exclude_lines = [
  # ignore when asked
  "pragma: no( |-)cover",
  # don't complain about typing blocks
  "if (typing\\.)?TYPE_CHECKING",
  # don't complain about __main__ blocks
  "if __name__ == '__main__'",
]
omit = [
  # don't report coverage for _version.py
  # (generated automatically by setuptools-scm)
  "*/_version.py",
]
# print report with one decimal point
precision = 1

[tool.flake8]
exclude = [
    "__pycache__",
    ".eggs/",
    ".git/",
    "docs/",
    "ligotimegps/_version.py",
    "venv/",
]

[tool.pytest.ini_options]
addopts = "-r a --color=yes"
filterwarnings = [
    "error",
    "ignore:Using or importing the ABCs",
]

[tool.setuptools]
packages = ["ligotimegps"]

[tool.setuptools_scm]
write_to = "ligotimegps/_version.py"
