[aliases]
test = pytest

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440
versionfile_source = ligotimegps/_version.py
versionfile_build = ligotimegps/_version.py
tag_prefix = v
parentdir_prefix =

[tool:pytest]
addopts = --verbose -r s

[coverage:run]
source = ligotimegps
omit =
	ligotimegps/_version.py
	ligotimegps/test_ligotimegps.py

[metadata]
license_file = LICENSE

[flake8]
exclude =
	__pycache__,
	.eggs/,
	.git/,
	docs/,
	ligotimegps/_version.py,
	venv/,
	versioneer.py,
