[metadata]
name = ligotimegps
author = Duncan Macleod
author_email = duncan.macleod@ligo.org
description = A pure Python version of lal.LIGOTimeGPS
license = GPL-3.0-or-later
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
download_url = https://pypi.org/project/ligotimegps/
project_urls =
	Bug Tracker = https://github.com/gwpy/ligotimegps/issues
	Documentation = https://ligotimegps.readthedocs.io/
	Source Code = https://github.com/gwpy/ligotimegps
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physic

[options]
packages = find:
python_requires = >=3.4
setup_requires =
	setuptools >= 38.2.5
	setuptools_scm
	wheel

[options.extras_require]
docs =
	sphinx >= 1.8.0
	sphinx-automodapi
	sphinx_rtd_theme
	sphinx-tabs
test =
	pytest >= 3.6.3
	pytest-cov >= 2.4.0

# -- packaging --------------

[bdist_wheel]
universal = 1

# -- tools ------------------

[coverage:run]
source = ligotimegps
omit =
	ligotimegps/_version.py

[flake8]
exclude =
	__pycache__,
	.eggs/,
	.git/,
	docs/,
	ligotimegps/_version.py,
	venv/,
